services/nginx-phpfpm/phpfpm.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: phpfpm
  namespace: app1
spec:
  replicas: 5 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 10
      maxUnavailable: 3 
  minReadySeconds: 5  
  template:
    metadata:
      labels:
        app: app1
        tier: interpreter
    spec:
      containers:
      - name: phpfpm
        image: pblaas/phpfpm-alpine-7.1-app1:latest
        resources:
          requests:
            cpu: "15m"
            memory: "80Mi"
          limits:
            cpu: "30m"
            memory: "100Mi"
        ports:
        - containerPort: 9000
