services/nginx-phpfpm/redis.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redis
  namespace: app1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
        tier: caching
    spec:
      containers:
      - name: resis
        image: redis:3.0.7-alpine
        resources:
          requests:
            cpu: "30m"
            memory: "25Mi"
          limits:
            cpu: "80m"
            memory: "50Mi"
        ports:
        - containerPort: 6379
